# llm-capecc-task

./: .gitignore  DCIS-Res-template.xml  README.md  crane.py  dcis_resection_model.py  prompts.py  pyproject.toml  schemas.py
cap_dcis_resection/: __init__.py  crane.py  prompts.py  schemas.py  validator.py
cap_dcis_resection/runners/: batch_cli.py  run_example.py  serve_api.py
tests/: test_crane_window.py  test_schema.py  test_validator.py
